--- a/vignettes/penguinWings.Rmd
+++ b/vignettes/penguinWings.Rmd
@@ -98,7 +98,7 @@ Use `scoresPlot` to show the consensus space from the analysis, which here repre
 pcol <- c("#ffffff", "#ffffff", "#ffffff", "#ffffff", "#e6b481", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#ffffff", "#feebd3", "#feebd3", "#ffffff", "#e6b481", "#feebd3", "#ffffff")
 
 
-# Plot consensus space showing global component one (GC1) and global component one (GC2)
+# Plot consensus space showing global component one (GC1) and global component two (GC2)
 
 scoresPlot(result, pcol = pcol)
 ```
